syntax = "proto3";
option go_package = "eventstore";

package eventstore;

service EventStore {
  // Create a new event to the event repository
  rpc CreateEvent (CreateEventRequest) returns ( CreateEventResponse) {}
  // Get all events for the given aggregate and event
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {}
//    Get stream of events for the given event
  rpc GetEventsStream(GetEventsRequest) returns (stream Event) {}
}

message Event {
  string event_id = 1;
  string event_type = 2;
  string aggregate_id = 3;
  string aggregate_type = 4;
  string event_data = 5;
  string stream = 6; 
}
message CreateEventRequest {
    Event event =1;
}

message CreateEventResponse {
  bool is_success = 1;
  string error = 2;
}

message GetEventsRequest {
  string event_id = 1;
  string aggregate_id = 2;
}

message GetEventsResponse {
  repeated Event events = 1;
}